--- a/style.css
+++ b/style.css
@@ -1,17 +1,26 @@
 body {
   background-color: #fafafa;
+  max-width: 860px;
+  margin: auto;
 }
 h1 {
   text-align: center;
   font-size: 4rem;
 }
+h1:hover {
+  color: blue;
+  font-size: 6rem;
+}
 h2 {
   font-size: 3rem;
+  text-decoration: underline;
+  text-decoration-color: pink;
 }
 p {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 article {
+  background-color: azure;
   border: 3px solid grey;
   padding: 1rem;
   margin: 1rem;
@@ -19,4 +28,8 @@ article {
 footer {
   padding: 2rem;
   text-align: center;
+}
+.author {
+  font-family: cursive;
+  font-size: 1.5rem;
 }
